--- a/proyecto_too/proyecto_too/proyecto_too.csproj
+++ b/proyecto_too/proyecto_too/proyecto_too.csproj
@@ -19,6 +19,7 @@
   <ItemGroup>
     <None Include="wwwroot\imagenes\descarga.jpg" />
     <None Include="wwwroot\imagenes\user.png" />
+    <None Include="wwwroot\Metodos Script\mettodos.js" />
   </ItemGroup>
 
 </Project>
